# hermes_run

./: CMakeLists.txt
CMake/: HermesRunConfig.cmake
benchmark/: CMakeLists.txt  test_latency.cc  test_zmq.cc
codegen/: hermes_run_config  make_macro  make_task  preamble.py  refresh_methods  update_task
codegen/codegen/labstor_config/: generator.py
codegen/codegen/util/: paths.py
config/: labstor_server_default.yaml
include/hermes_run/: hermes_run_constants.h  hermes_run_namespace.h  hermes_run_types.h
include/hermes_run/api/: hermes_run_client.h  hermes_run_runtime.h  manager.h
include/hermes_run/api/template/: hermes_run_task_node_admin_root.template  hermes_run_task_node_push_root.template
include/hermes_run/config/: config.h  config_client.h  config_client_default.h  config_server.h  config_server_default.h
include/hermes_run/network/: local_serialize.h  rpc.h  serialize.h
include/hermes_run/queue_manager/: queue.h  queue_factory.h  queue_manager.h  queue_manager_client.h  queue_manager_runtime.h
include/hermes_run/queue_manager/queues/: hshm_queue.h
include/hermes_run/task_registry/: task.h  task_lib.h  task_registry.h
include/hermes_run/work_orchestrator/: affinity.h  scheduler.h  work_orchestrator.h  worker.h
scripts/: lint.sh
src/: CMakeLists.txt  config_client.cc  config_server.cc  hermes_run_client.cc  hermes_run_runtime.cc  hermes_run_start_runtime.cc  hermes_run_stop_runtime.cc  worker.cc
tasks_required/: CMakeLists.txt
tasks_required/TASK_NAME/include/TASK_NAME/: TASK_NAME.h  TASK_NAME_lib_exec.h  TASK_NAME_methods.h  TASK_NAME_tasks.h
tasks_required/TASK_NAME/src/: TASK_NAME.cc
tasks_required/hermes_run_admin/: CMakeLists.txt
tasks_required/hermes_run_admin/include/hermes_run_admin/: hermes_run_admin.h  hermes_run_admin_lib_exec.h  hermes_run_admin_methods.h  hermes_run_admin_tasks.h
tasks_required/hermes_run_admin/src/: CMakeLists.txt  hermes_run_admin.cc
tasks_required/proc_queue/include/proc_queue/: proc_queue.h  proc_queue_lib_exec.h  proc_queue_methods.h  proc_queue_tasks.h
tasks_required/proc_queue/src/: proc_queue.cc
tasks_required/remote_queue/: CMakeLists.txt
tasks_required/remote_queue/include/remote_queue/: remote_queue.h  remote_queue_lib_exec.h  remote_queue_methods.h  remote_queue_tasks.h
tasks_required/remote_queue/src/: CMakeLists.txt  remote_queue.cc
tasks_required/small_message/include/small_message/: small_message.h  small_message_lib_exec.h  small_message_methods.h  small_message_tasks.h
tasks_required/small_message/src/: small_message.cc
tasks_required/worch_proc_round_robin/include/worch_proc_round_robin/: worch_proc_round_robin.h  worch_proc_round_robin_lib_exec.h  worch_proc_round_robin_methods.h  worch_proc_round_robin_tasks.h
tasks_required/worch_proc_round_robin/src/: worch_proc_round_robin.cc
tasks_required/worch_queue_round_robin/include/worch_queue_round_robin/: worch_queue_round_robin.h  worch_queue_round_robin_lib_exec.h  worch_queue_round_robin_methods.h  worch_queue_round_robin_tasks.h
tasks_required/worch_queue_round_robin/src/: worch_queue_round_robin.cc
test/unit/: CMakeLists.txt  basic_test.h
test/unit/boost/: CMakeLists.txt  test_init.cc  test_init.h
test/unit/ipc/: test_finalize.cc  test_init.cc  test_ipc.cc  test_serialize.cc
